<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.usersDetail.UsersDetailFragment">

    <ImageView
        android:id="@+id/iv_user_avator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tv_user_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_datail_name"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_avator"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_user_detail_reputation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:layout_marginTop="6dp"
        android:text="@string/user_detail_reputation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_detail_name"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_badges_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/badges_count_title"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_detail_reputation"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tv_badges_label_bronze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:text="@string/badge_label_bronze"
        app:layout_constraintTop_toBottomOf="@id/tv_badges_title" />

    <TextView
        android:id="@+id/tv_badges_label_silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:text="@string/badge_label_silver"
        app:layout_constraintTop_toBottomOf="@id/tv_badges_label_bronze" />


    <TextView
        android:id="@+id/tv_badges_label_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:text="@string/badge_label_gold"
        app:layout_constraintTop_toBottomOf="@id/tv_badges_label_silver" />


    <TextView
        android:id="@+id/tv_user_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:text="@string/user_location"
        app:layout_constraintTop_toBottomOf="@id/tv_badges_label_gold" />


    <TextView
        android:id="@+id/tv_creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:text="@string/creation_date"
        app:layout_constraintTop_toBottomOf="@id/tv_user_location" />






</androidx.constraintlayout.widget.ConstraintLayout>